--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,47 @@
+.info-content {
+  border: 1px solid transparent;
+  color: #feffff;
+  margin-top: 100px;
+  margin-bottom: 70px;
+  text-align: center;
+}
+.info-content .title {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  line-height: 40px;
+}
+.info-content .paragraph {
+  font-size: 14px;
+  letter-spacing: 1px;
+  line-height: 20px;
+}
+.form-content {
+  border: 1px solid #ff0;
+}
+.btn {
+  display: block;
+  width: 100%;
+  background-color: #f00;
+}
 body {
-  background: #ffc0cb;
+  background-image: url("../images/bg-intro-mobile.png");
+  background-position: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #ff7a7a;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+}
+body main {
+  max-width: 330px;
+}
+@media screen and (min-width: 768px) {
+  body {
+    background-image: url("../images/bg-intro-desktop.png");
+    background-repeat: repeat;
+  }
 }
