--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -1,6 +1,7 @@
 @import 'modules/_vars'
 @import 'modules/_info'
 @import 'modules/_form'
+@import 'modules/_buttons'
 
 body
 	background-image url('../images/bg-intro-mobile.png')
@@ -16,6 +17,10 @@ body
 
 	main
 		max-width 330px
+
+	a
+		color color-white
+		text-decoration none
 
 @media screen and (min-width 768px)
 	body
