--- a/stylus/modules/_form.styl
+++ b/stylus/modules/_form.styl
@@ -1,7 +1,7 @@
-.form-content
-	border 1px solid yellow
-
-.btn
-	display block
-	width 100%
-	background-color red
+.form
+	background-color color-white
+	border-radius 10px
+	height 450px
+	margin-bottom 100px
+	padding-top 25px
+	padding-bottom 25px
