--- a/stylus/modules/_info.styl
+++ b/stylus/modules/_info.styl
@@ -1,8 +1,8 @@
 .info-content
 	border 1px solid transparent
-	color #feffff
+	color color-white
 	margin-top 100px
-	margin-bottom 70px
+	margin-bottom 50px
 	text-align center
 
 	.title
