--- a/stylus/modules/_vars.styl
+++ b/stylus/modules/_vars.styl
@@ -6,3 +6,6 @@ color-blue = #6055A5
 // --- Neutral
 color-dark = #3E3C49
 color-grayish = #B9B6D3
+color-white = #F3FFFF
+// --- Others
+color-shadow = rgba(220, 101, 105, 1)
