--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -30,9 +30,11 @@ body
 @media screen and (min-width 1024px)
 	body
 		height 100vh
+		align-items center
 
 	main
 		display flex
+		align-items center
 		width 80vw !important
-		height 90vh
+		height 85vh
 		border 1px solid blue
