--- a/stylus/modules/_form.styl
+++ b/stylus/modules/_form.styl
@@ -40,3 +40,10 @@
 			a
 				color color-red
 				font-weight 500
+
+@media screen and (min-width 1024px)
+	.form-content
+		border 1px solid green
+
+	.form
+		margin-bottom 0 !important
