--- a/stylus/modules/_info.styl
+++ b/stylus/modules/_info.styl
@@ -15,3 +15,19 @@
 		font-size 14px
 		letter-spacing 1px
 		line-height 20px
+
+@media screen and (min-width 1024px)
+	.info-content
+		margin-top 0
+		margin-bottom 0
+		margin-right 80px
+		text-align left
+
+		.title
+			font-size 47px
+			line-height 55px
+			width 413px
+
+		.paragraph
+			line-height 25px
+			width 495px
