--- a/stylus/modules/_buttons.styl
+++ b/stylus/modules/_buttons.styl
@@ -41,3 +41,18 @@
 
 	&:active
 		background-color #49ae84
+
+@media screen and (min-width 1024px)
+	.btn-purple
+		height 62px
+
+		a
+			height 100%
+			line-height 62px
+			width 100%
+
+			span
+				font-weight 600
+
+	.btn-green
+		width 85%
