--- a/stylus/modules/_form.styl
+++ b/stylus/modules/_form.styl
@@ -43,7 +43,16 @@
 
 @media screen and (min-width 1024px)
 	.form-content
-		border 1px solid green
+		width 540px
 
 	.form
-		margin-bottom 0 !important
+		margin-bottom 0
+		padding-top 30px
+		height 435px
+
+		.form-inputs
+			input
+				width 80%
+
+			p
+				width 80%
