Styles for errors in inputs

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -2,6 +2,7 @@
 @import 'modules/_info'
 @import 'modules/_form'
 @import 'modules/_buttons'
+@import 'modules/_errors'
 
 body
 	background-image url('../images/bg-intro-mobile.png')
