--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,11 @@
   background-color: #f3ffff;
   border-radius: 10px;
   box-shadow: 0px 10px 0px 0px #dc6569;
-  height: 450px;
+  height: 500px;
   margin-bottom: 100px;
   padding-top: 27px;
+  display: flex;
+  align-items: center;
 }
 .form .form-inputs {
   width: 100%;
@@ -53,7 +55,6 @@
   height: 50px;
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 20px;
   padding-left: 25px;
   width: 255px;
 }
@@ -77,6 +78,18 @@
   color: #ff7a7a;
   font-weight: 500;
 }
+.form .form-inputs p a:hover {
+  text-decoration: underline;
+}
+.form .form-inputs .info {
+  color: #ff7a7a;
+  font-size: 12px;
+  font-style: italic;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  text-align: right;
+  width: 280px;
+}
 @media screen and (min-width: 1024px) {
   .form-content {
     width: 540px;
@@ -84,13 +97,16 @@
   .form {
     margin-bottom: 0;
     padding-top: 30px;
-    height: 435px;
+    height: 485px;
   }
   .form .form-inputs input {
     width: 80%;
   }
   .form .form-inputs p {
     width: 80%;
+  }
+  .form .form-inputs .info {
+    width: 85%;
   }
 }
 .btn-purple {
@@ -151,6 +167,26 @@
   }
   .btn-green {
     width: 85%;
+  }
+}
+.info-error {
+  border: 2px solid #ff7a7a;
+  color: #ff7a7a;
+}
+.info-error:focus,
+.info-error input.form-control:focus {
+  border-color: #3e3c49;
+  color: #3e3c49;
+}
+.img-error {
+  background-image: url("../images/icon-error.svg");
+  background-position-x: 230px;
+  background-position-y: 13px;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 1024px) {
+  .img-error {
+    background-position-x: 405px;
   }
 }
 body {
