Add success alert

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -3,6 +3,7 @@
 @import 'modules/_form'
 @import 'modules/_buttons'
 @import 'modules/_errors'
+@import 'modules/_success'
 
 body
 	background-image url('../images/bg-intro-mobile.png')
