--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,10 @@
 .info-content .title {
   font-size: 30px;
   font-weight: 700;
-  letter-spacing: 1px;
   line-height: 40px;
 }
 .info-content .paragraph {
   font-size: 14px;
-  letter-spacing: 1px;
   line-height: 20px;
 }
 @media screen and (min-width: 1024px) {
@@ -26,11 +24,11 @@
   .info-content .title {
     font-size: 47px;
     line-height: 55px;
-    width: 413px;
+    max-width: 413px;
   }
   .info-content .paragraph {
     line-height: 25px;
-    width: 495px;
+    max-width: 495px;
   }
 }
 .form {
@@ -97,6 +95,7 @@
   .form {
     margin-bottom: 0;
     padding-top: 30px;
+    width: 540px;
     height: 485px;
   }
   .form .form-inputs input {
@@ -118,7 +117,6 @@
   display: flex;
   height: 90px;
   justify-content: center;
-  margin-bottom: 25px;
   text-align: center;
   width: 100%;
 }
@@ -187,6 +185,39 @@
 @media screen and (min-width: 1024px) {
   .img-error {
     background-position-x: 405px;
+  }
+}
+.alert-success {
+  background-color: #38cc8c;
+  border-radius: 5px;
+  color: #f3ffff;
+  font-size: 14px;
+  height: 25px;
+  left: 40px;
+  line-height: 25px;
+  opacity: 0;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  top: -15px;
+  width: 250px;
+}
+.visible {
+  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@media screen and (min-width: 1024px) {
+  .alert-success {
+    left: 150px;
+  }
+}
+@keyframes slide-bottom {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(55px);
+    opacity: 1;
   }
 }
 body {
