--- a/stylus/modules/_buttons.styl
+++ b/stylus/modules/_buttons.styl
@@ -7,7 +7,7 @@
 	display flex
 	height 90px
 	justify-content center
-	margin-bottom 25px
+	// margin-bottom 25px
 	text-align center
 	width 100%
 
