--- a/stylus/modules/_info.styl
+++ b/stylus/modules/_info.styl
@@ -8,12 +8,12 @@
 	.title
 		font-size 30px
 		font-weight 700
-		letter-spacing 1px
+		// letter-spacing 1px
 		line-height 40px
 
 	.paragraph
 		font-size 14px
-		letter-spacing 1px
+		// letter-spacing 1px
 		line-height 20px
 
 @media screen and (min-width 1024px)
@@ -26,8 +26,8 @@
 		.title
 			font-size 47px
 			line-height 55px
-			width 413px
+			max-width 413px
 
 		.paragraph
 			line-height 25px
-			width 495px
+			max-width 495px
